# dhcplease

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
docs/: architecture.md  rfc-compliance.md  sequence-diagram.md  troubleshooting.md
src/: config.rs  error.rs  lease.rs  lib.rs  main.rs  options.rs  packet.rs  server.rs
tests/: proptest_packet.rs
