[package]
name = "dhcplease"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = "A developer-grade DHCP server for Windows"
readme = "README.md"
homepage = "https://github.com/matthewjberger/dhcplease"
repository = "https://github.com/matthewjberger/dhcplease"
keywords = ["dhcp", "network", "server", "windows"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "dhcplease"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio-test = "0.4"
